# bc-lts-java

./: .gitignore  .gitlab-ci.yml  MIGRATION.md   README.md  all_test.sh  all_test_unsigned.sh  build.gradle  check-indexes.sh  fips_jni_to_lts.sh  gradle.properties  jvm_onjar_tests.xml  jvm_tests.xml  mod_all_test_unsigned.sh  settings.gradle  test11.xml  test11_onjar.xml  test17.xml  test17_onjar.xml  test21.xml  test21_onjar.xml  version.sh
bctools/: build.gradle
benchmark/: README.md  arm_benchmark_linux.sh  arm_benchmark_linux_cbc.sh  arm_benchmark_linux_cfb.sh  arm_benchmark_linux_ctr.sh  arm_benchmark_linux_ecb.sh  arm_benchmark_linux_gcm.sh  arm_benchmark_linux_sha.sh  benchmark_linux_cbc.sh  benchmark_linux_cfb.sh  benchmark_linux_ctr.sh  benchmark_linux_ecb.sh  benchmark_linux_gcm.sh  benchmark_linux_sha.sh  build.gradle
native/: .gitignore  CMakeLists.txt  build_darwin.sh  build_linux.sh  debug.cpp  debug.h  macro.h  main.cpp  main_arm.cpp
native/arm64/jni/: ident_jni.cpp  native_entropy_source_jni.cpp  native_features.cpp  variant_selector.cpp
native/arm64/rand/: Rand.cpp  Rand.h
native/exceptions/: CipherTextException.cpp  CipherTextException.h  OutputLengthException.cpp  OutputLengthException.h
native/intel/: common.cpp  common.h  log.h
native/intel/aes/: aes_common_128b.h  aes_common_256b.h  aes_common_512b.h
native/intel/cbc/: AesCBC.h  AesCBC128Impl.cpp  AesCBC128NarrowImpl.cpp  AesCBC192Impl.cpp  AesCBC192NarrowImpl.cpp  AesCBC256Impl.cpp  AesCBC256NarrowImpl.cpp  AesCBCDecrypt.cpp  AesCBCDecryptVaes.cpp  AesCBCDecryptVaes.h  AesCBCDecryptVaesF.cpp  AesCBCDecryptVaesF.h  AesCBCEncrypt.cpp  AesCBCNarrow.h  CBC.cpp  CBC.h  CBC128wide.cpp  CBC128wide.h  CBC256wide.cpp  CBC256wide.h  CBC512wide.cpp  CBC512wide.h  CBCLike.cpp  CBCLike.h  CBCNarrow.cpp  CBCNarrow.h  CBCVaes.cpp  CBCVaes.h
native/intel/cfb/: AesCFB.h  AesCFB128Impl.cpp  AesCFB128Wide.h  AesCFB192Impl.cpp  AesCFB256Impl.cpp  AesCFB256Wide.h  AesCFBDecrypt.cpp  AesCFBDecryptVAES.cpp  AesCFBEncrypt.cpp  CFB128Wide.cpp  CFB128Wide.h  CFB256Wide.cpp  CFB256Wide.h  CFBLike.cpp  CFBLike.h  cfb.cpp  cfb.h
native/intel/digest/: Digest.cpp  Digest.h  SHA256.cpp  SHA256.h
native/intel/ecb/: AesEcb.cpp  AesEcb.h  AesEcb256W.cpp  AesEcb256W.h  AesEcb512W.cpp  AesEcb512W.h  ecb.cpp  ecb.h
native/intel/gcm/: AesGcm.cpp  AesGcm.h  AesGcm128wide.cpp  AesGcm128wide.h  AesGcm256wide.cpp  AesGcm256wide.h  AesGcm512wide.cpp  AesGcm512wide.h  gcm.cpp  gcm.h
native/intel/jni/: cbc_jni.cpp  cbc_jni_vaes.cpp  cbc_jni_vaes_f.cpp  cfb_jni.cpp  cfb_jni_vaes.cpp  digest_jni.cpp  ecb_jni.cpp  ecb_jni_vaes.cpp  ecb_jni_vaesf.cpp  gcm_jni.cpp  gcm_jni_vaes.cpp  gcm_jni_vaesf.cpp  ident_jni.cpp  native_entropy_source_jni.cpp  native_features.cpp  variant_selector_intel.cpp
native/intel/rand/: Rand.cpp  Rand.h
native/jni/: native_entropy_source_jni.cpp
native/jniutil/: JavaByteArray.cpp  JavaByteArray.h  JavaByteArrayCritical.cpp  JavaByteArrayCritical.h  JavaEnvUtils.cpp  JavaEnvUtils.h
native_c/: CMakeLists.txt  build_linux.sh  build_osx.sh  debug.c  debug.h  main.c  notes.txt
native_c/arm/: debug_neon.h  main.c
native_c/arm/aes/: aes_common_neon.h  aes_key.c  schedule.h
native_c/arm/cbc/: cbc.c  cbc.h  cbc_neon.c
native_c/arm/ccm/: ccm.c  ccm.h  ccm_neon.c
native_c/arm/cfb/: cfb.c  cfb.h  cfb_neon.c
native_c/arm/ctr/: ctr.c  ctr.h  ctr_neon.c
native_c/arm/ecb/: ecb.h  ecb_neon.c
native_c/arm/gcm/: gcm.c  gcm.h  gcm_aes_func.h  gcm_common.h  gcm_hash.h  gcm_neon.c
native_c/arm/jni/: cbc_jni.c  ccm_jni.c  cfb_jni.c  cmul_jni.c  ctr_jni.c  ecb_jni.c  gcm_jni.c  ident_jni.c  native_features.c  sha224_jni.c  sha256_jni.c  sha384_jni.c  sha3_jni.c  sha512_jni.c  shake_jni.c  variant_selector_arm.c  variant_selector_intel.c
native_c/arm/keccak/: keccak.h
native_c/arm/mul/: cmul.h  cmul128.c
native_c/arm/sha/: sha224.c  sha224.h  sha256.c  sha256.h  sha3.c  sha3.h  sha384.c  sha384.h  sha512.c  sha512.h  shake.c  shake.h
native_c/arm/util/: util.c  util.h
native_c/intel/: common.c  common.h  common_sysV.asm
native_c/intel/aes/: aes_common_128b.h  aes_common_256b.h  aes_common_512b.h
native_c/intel/cbc/: cbc.c  cbc.h  cbc128.c  cbc256.c  cbc512.c
native_c/intel/ccm/: ccm.c  ccm.h  ccm128.c  ccm256.c  ccm512.c
native_c/intel/cfb/: cfb.c  cfb.h  cfb128.c  cfb256.c  cfb512.c
native_c/intel/ctr/: ctr.c  ctr.h  ctr128w.c  ctr256w.c  ctr512w.c
native_c/intel/ecb/: ecb.c  ecb.h  ecb128w.c  ecb256w.c  ecb512w.c
native_c/intel/gcm/: gcm.c  gcm.h  gcm128w.c  gcm512w.c  gcmHash128.h  gcmHash512.h
native_c/intel/gcm_siv/: gcm_siv.c  gcm_siv.h  gcm_siv128w.c  gcm_siv512w.c  gcm_sivHash512.h
native_c/intel/jni/: cbc_jni.c  cbc_pc_jni.c  ccm_jni.c  ccm_pc_jni.c  cfb_jni.c  cfb_pc_jni.c  cmul_jni.c  ctr_jni.c  ctr_pc_jni.c  ecb_jni.c  gcm_jni.c  gcm_pc_jni.c  gcm_siv_jni.c  gcm_siv_pc_jni.c  ident_jni.c  native_features.c  rand_jni.c  sha224_jni.c  sha256_jni.c  slhdsa_sha256_jni.c  variant_selector_intel.c
native_c/intel/mul/: cmul.h  cmul128.c
native_c/intel/packet/: packet_utils.c  packet_utils.h
native_c/intel/packet/cbc_pc/: cbc_pc.c  cbc_pc.h  cbc_pc128.c  cbc_pc256.c  cbc_pc512.c
native_c/intel/packet/ccm_pc/: ccm_pc.c  ccm_pc.h  ccm_pc128.c  ccm_pc256.c  ccm_pc512.c
native_c/intel/packet/cfb_pc/: cfb_pc.c  cfb_pc.h  cfb_pc128.c  cfb_pc256.c  cfb_pc512.c
native_c/intel/packet/ctr_pc/: ctr_pc.c  ctr_pc.h  ctr_pc128w.c  ctr_pc256w.c  ctr_pc512w.c  ctr_pc_utils.c  ctr_pc_utils.h
native_c/intel/packet/gcm_pc/: gcm_pc.c  gcm_pc.h  gcm_pc128w.c  gcm_pc512w.c  gcm_pcHash128.h  gcm_pcHash512.h
native_c/intel/packet/gcm_siv_pc/: gcm_siv_pc.c  gcm_siv_pc.h
native_c/intel/probe/: probe.h
native_c/intel/sha/: sha224.c  sha224.h  sha256.c  sha256.h
native_c/intel/slhdsa/: slhdsa_sha256.c  slhdsa_sha256.h
native_c/intel/util/: util.c  util.h  xor.h
native_c/jniutil/: bytearraycritical.c  bytearraycritical.h  bytearrays.c  bytearrays.h  exceptions.c  exceptions.h  jni_asserts.h  longarraycritical.c  longarraycritical.h  longarrays.c  longarrays.h  variant_selector.h
(+889 files in other folders)
